--- a/about/index.html
+++ b/about/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="The biography and information about me.">
     <link rel="icon" href="/logo.png">
     
-    <link rel="preload" href="/assets/css/0.styles.489d24ff.css" as="style"><link rel="preload" href="/assets/js/app.b6a8809c.js" as="script"><link rel="preload" href="/assets/js/2.0fc9f8c9.js" as="script"><link rel="preload" href="/assets/js/8.7dde1d6b.js" as="script"><link rel="preload" href="/assets/js/3.06951db2.js" as="script"><link rel="prefetch" href="/assets/js/10.23a08a59.js"><link rel="prefetch" href="/assets/js/11.6921380a.js"><link rel="prefetch" href="/assets/js/12.caae3fee.js"><link rel="prefetch" href="/assets/js/4.9dccd740.js"><link rel="prefetch" href="/assets/js/5.54adec9b.js"><link rel="prefetch" href="/assets/js/6.44285eb2.js"><link rel="prefetch" href="/assets/js/7.92d40a23.js"><link rel="prefetch" href="/assets/js/9.dc903e2a.js">
+    <link rel="preload" href="/assets/css/0.styles.489d24ff.css" as="style"><link rel="preload" href="/assets/js/app.90721927.js" as="script"><link rel="preload" href="/assets/js/2.9e22f5a6.js" as="script"><link rel="preload" href="/assets/js/8.7dde1d6b.js" as="script"><link rel="preload" href="/assets/js/3.06951db2.js" as="script"><link rel="prefetch" href="/assets/js/10.23a08a59.js"><link rel="prefetch" href="/assets/js/11.6921380a.js"><link rel="prefetch" href="/assets/js/12.caae3fee.js"><link rel="prefetch" href="/assets/js/4.9dccd740.js"><link rel="prefetch" href="/assets/js/5.54adec9b.js"><link rel="prefetch" href="/assets/js/6.44285eb2.js"><link rel="prefetch" href="/assets/js/7.92d40a23.js"><link rel="prefetch" href="/assets/js/9.dc903e2a.js">
     <link rel="stylesheet" href="/assets/css/0.styles.489d24ff.css">
   </head>
   <body>
@@ -26,7 +26,7 @@ I received my bachelor degree from Dalian Maritime University in 2021.</p> <p>My
           Projects
         </a></div><div><a href="/article/" target="" class="button">
           CV
-        </a></div></div></div></div></div> <footer class="page-edit"><!----> <div class="last-updated"><span class="prefix">Last Updated:</span> <span class="time">1/3/2020, 12:57:27 PM</span></div></footer> <!----> </main></div><div class="global-ui"></div></div>
-    <script src="/assets/js/app.b6a8809c.js" defer></script><script src="/assets/js/2.0fc9f8c9.js" defer></script><script src="/assets/js/8.7dde1d6b.js" defer></script><script src="/assets/js/3.06951db2.js" defer></script>
+        </a></div></div></div></div></div> <footer class="page-edit"><!----> <!----></footer> <!----> </main></div><div class="global-ui"></div></div>
+    <script src="/assets/js/app.90721927.js" defer></script><script src="/assets/js/2.9e22f5a6.js" defer></script><script src="/assets/js/8.7dde1d6b.js" defer></script><script src="/assets/js/3.06951db2.js" defer></script>
   </body>
 </html>
