--- a/mat/index.html
+++ b/mat/index.html
@@ -52,7 +52,7 @@
           <center><span style="font-size:18px">Nanjing University</span></center>
           </div>
 
-          <div><center><span style="font-size:18px">Yifei Huang</a></span></center>
+          <div><center><span style="font-size:18px"><a href="https://hyf015.github.io/" target="_blank">Yifei Huang</a></span></center>
           <center><span style="font-size:18px">Shanghai AI Laboratory</span></center>
           </div>
 
