--- a/mat/index.html
+++ b/mat/index.html
@@ -70,7 +70,7 @@
         on Computer Vision (ICCV), 2023</a></span></center>
 
       <div class="table-like" style="justify-content:space-evenly;max-width:700px;margin:auto;padding:5px">
-        <div><center><span style="font-size:28px"><a href='https://arxiv.org/pdf/xxxx.yyyyy.pdf'>[Paper]</a></span></center></div>
+        <div><center><span style="font-size:28px"><a href='https://arxiv.org/abs/2308.07893'>[Paper]</a></span></center></div>
         <div><center><span style="font-size:28px"><a href='https://github.com/Echo0125/Memory-and-Anticipation-Transformer'>[GitHub Code]</a></span></center> </div>
       </div>
 
@@ -150,14 +150,15 @@
               <td width=550px align=left>
                 <div class="paper" id="mat2023_bib">
 <pre xml:space="preserve">
-@inproceedings{wang2023mat,
-    title={Memory-and-Anticipation Transformer 
-    for Online Action Understanding},
-    author={Jiahao Wang and Guo Chen and 
-    Yifei Huang and Limin Wang and Tong Lu},
-    year={2023},
-    booktitle={International Conference 
-    on Computer Vision (ICCV)},
+@misc{wang2023memoryandanticipation,
+      title={Memory-and-Anticipation Transformer for 
+             Online Action Understanding}, 
+      author={Jiahao Wang and Guo Chen and 
+              Yifei Huang and Limin Wang and Tong Lu},
+      year={2023},
+      eprint={2308.07893},
+      archivePrefix={arXiv},
+      primaryClass={cs.CV}
 }</pre>
                 </div>
                 </td>
