--- a/mat/index.html
+++ b/mat/index.html
@@ -130,7 +130,7 @@
               <!-- <p style="margin-top:4px;"></p> -->
               <a href="https://arxiv.org/pdf/xxxx.yyyyy.pdf" target="_blank"><img style="height:150px" src="resources/paper.png"/></a>
               <center>
-              <span style="font-size:20pt"><a href="https://arxiv.org/pdf/xxxx.yyyyy.pdf" target="_blank">[Paper]</a></span>
+              <span style="font-size:20pt"><a href="https://arxiv.org/abs/2308.07893" target="_blank">[Paper]</a></span>
               </center>
               </td>
               <td width=20px align=center>
